# oem

./: .gitignore  .gitlab-ci.yml  .pypirc  LICENSE  README.md  prof.py.lprof  prof.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  codeql.yml  coverage.yml  python-package.yml
benchmarks/: test_operations.py
docs/: components.rst  conf.py  index.rst  interface.rst  types.rst
oem/: __init__.py  base.py  compare.py  interface.py  interp.py  parser.py  parsers.py  patterns.py  tle.py  tools.py
oem/components/: __init__.py  covariance.py  data.py  header.py  metadata.py  segment.py  types.py
oem/parser/: base.py  states.py
tests/: test_compare.py  test_interpolation.py  test_samples.py  test_tle.py  test_tools.py  test_types.py
tests/samples/real/: CompareExample1.oem  CompareExample2.oem  GEO_60s.oem  LEO_10s.oem  LEO_60s.oem  MEO_20s.oem
tests/samples/v1_0/invalid/: sample02.oem  sample04.oem
tests/samples/v2_0/invalid/: sample02.skip  sample06.oem  sample07.oem  sample08.oem  sample09.oem  sample10.oem  sample11.oem  sample14.oem  sample16.oem  sample17.oem  sample18.oem  sample19.oem  sample20.oem  sample21.oem  sample22.oem  sample23.oem  sample24.oem  sample25.oem
tests/samples/v2_0/valid/: sample02.oem  sample04.oem  sample05.oem  sample08.oem  sample11.oem.skip  sample12.oem  sample15.oem.bz2  sample16.oem.bz2  sample17.oem.xz  sample18.oem.xz  sample19.oem.lzma  sample20.oem.lzma
tests/samples/v3_0/valid/: sample01.oem  sample02.oem
(+17 files in other folders)
