[project]
name = "oem"
description = "Python Orbit Ephemeris Message (OEM) tools"
version = "0.4.4"
authors = [
    { name = "Brad Sease", email = "bradsease@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    'Programming Language :: Python',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy"
]

requires-python = ">=3.8"

dependencies = [
    "numpy>=1.20",
    "astropy>=5.0.8",
    "lxml>=4.5.0",
    "defusedxml>=0.6.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
]

coverage = [
    "pytest-cov",
    "coveralls",
]

tle = [
    "sgp4>=2.1"
]
